fix the alignment of div

--- a/src/components/Statistics/Stats.css
+++ b/src/components/Statistics/Stats.css
@@ -52,7 +52,7 @@
     font-weight: bold;
     color: white;
     line-height: 1.2rem;
-    margin-top: 2.5rem;
+    margin-top: 4rem;
     text-shadow:
         -2px 1px 0 #E56E00,
         -3px 2px 0 black;
